--- a/demo.html
+++ b/demo.html
@@ -166,6 +166,26 @@
             }
         }
 
+        @keyframes gumPop {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.3);
+        opacity: 1;
+    }
+    80% {
+        transform: scale(0.8);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.5);
+        opacity: 0;
+    }
+}
+
+
         .answer-box {
             width: 400px;
             padding: 20px;
@@ -189,6 +209,38 @@
             box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3); 
             background: linear-gradient(135deg, #66d3f0 0%, #00A9E0 100%); 
         }
+
+
+        .answer-box.popped {
+            animation: gumPop 0.5s forwards;
+}
+
+.flash-effect {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    opacity: 0;
+    pointer-events: none;
+    z-index: 9999;
+    animation: flash 0.3s forwards;
+}
+        @keyframes swipeLeft {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100vw);
+        opacity: 0;
+    }
+}
+
+.answer-box.swiped {
+    animation: swipeLeft 0.3s forwards;
+}
 
     .logo {
             position: fixed;
@@ -390,8 +442,8 @@
 <audio id="fullStopSound" src="sfx/mus_sfx_a_target.wav" preload="auto"></audio>
 <audio id="hoverSound" src="sfx/happy-pop-2-185287.mp3" preload="auto"></audio>
 <audio id="answer1Sound" src="sfx/game-bonus-144751.mp3" preload="auto"></audio>
-<audio id="answer234Sound" src="sfx/cow_bells_01-98236.mp3" preload="auto"></audio>
-<audio id="backgroundMusic" src="music/bgm1.mp3" preload="auto" loop></audio>
+<audio id="answer234Sound" src="sfx/multiPop.mp3" preload="auto"></audio>
+<audio id="backgroundMusic" src="music/bgm.mp3" preload="auto" loop></audio>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const colors = ["#51cacc", "#9df871", "#e0ff77", "#de9dd6", "#ff708e"];
@@ -564,6 +616,29 @@
                 });
             });
         });
+
+        document.querySelectorAll('.answer-box').forEach(box => {
+            const answer = box.getAttribute('data-answer');
+            if (['2', '3', '4'].includes(answer)) {
+                box.addEventListener('click', function() {
+                    this.classList.add('popped');
+                    
+                    // Create and append the flash effect element
+                    const flashEffect = document.createElement('div');
+                    flashEffect.className = 'flash-effect';
+                    document.body.appendChild(flashEffect);
+                    
+                    setTimeout(() => {
+                        this.style.display = 'none';
+                        // Remove the flash effect element after the animation
+                        document.body.removeChild(flashEffect);
+                    }, 500); // Match the duration of the gumPop animation
+                });
+            }
+        });
+
+
+
 
         function setTypeSoundVolume(volume) {
             document.getElementById("typeSound").volume = volume;
